<resources>
    <string name="app_name">AuthIO</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="pref_file">com.example.preference_file</string>
    <string name="pref_login_status">com.example.preference_login_status</string>
    <string name="pref_token">com.example.preference_token</string>
    <string name="pref_refresh_token">com.example.preference_refresh_token</string>
    <string name="pref_last_auth_user_id">com.example.preference_last_auth_user_id</string>
    <string name="pref_last_user_fetch_time">com.example.preference_last_user_fetch_time</string>
    <string name="pref_last_users_fetch_time">com.example.preference_last_users_fetch_time</string>

    <string name="email_hint">Enter E-mail</string>
    <string name="username_hint">Enter Username</string>
    <string name="password_hint">Enter Password</string>
    <string name="description_hint">Enter Description</string>

    <string name="no_account_hint">Don\'t have an account? Sign Up!</string>
    <string name="have_account_hint">Have an account? Login!</string>

    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>

    <string name="bn_view_users_title">View Users</string> <!--bn = bottom nav-->
    <string name="bn_view_self_title">View Self</string>

    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_fields">Confirm Fields</string>

    <string name="change_password">Change\n Password</string>
    <string name="change_email">Change\n E-mail</string>
    <string name="delete_account">Delete Account</string>

    <string name="new_email_hint">Enter New E-mail</string>
    <string name="new_password_hint">Enter New Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="confirm_new_password_hint">Confirm New Password</string>

</resources>
