<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/email_change_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/round_container_light"
    android:clipToPadding="false"
    android:orientation="vertical"
    app:cardUseCompatPadding="true"
    android:padding="15dp" >

    <TextView
        android:id="@+id/change_email_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/change_email"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.example.authio.views.custom.ErrableEditText
        android:id="@+id/new_email_input_field"
        style="@style/EditTextTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/new_email_hint"
        android:inputType="textEmailAddress"
        android:maxLines="4" />

    <com.example.authio.views.custom.ErrableEditText
        android:id="@+id/password_input_field"
        style="@style/EditTextTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:maxLines="2" />

    <com.example.authio.views.custom.ErrableEditText
        android:id="@+id/confirm_password_input_field"
        style="@style/EditTextTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:maxLines="2" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_button"
            android:drawableStart="@drawable/ic_baseline_close_24"
            android:drawableLeft="@drawable/ic_baseline_close_24"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/cancel"
            android:textSize="18sp" />

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_button"
            android:drawableStart="@drawable/ic_check_white_24dp"
            android:drawableLeft="@drawable/ic_check_white_24dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/confirm"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>