<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:visibility="visible"
    tools:context=".views.ui.fragments.LoginFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:layout_marginBottom="35dp"
        tools:context=".views.ui.fragments.LoginFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/round_container"
            android:clipToPadding="true"
            android:padding="10dp">

            <TextView
                android:id="@+id/login_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/login"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/email_input_field"
                app:layout_constraintEnd_toEndOf="@+id/email_input_field"
                app:layout_constraintStart_toStartOf="@+id/email_input_field"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/error_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="#FF0000"
                android:textSize="22sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/email_input_field"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_header" />

            <com.example.authio.views.custom.ErrableEditText
                android:id="@+id/email_input_field"
                style="@style/EditTextTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="4"
                app:layout_constraintBottom_toTopOf="@id/password_input_field"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_header" />

            <com.example.authio.views.custom.ErrableEditText
                android:id="@+id/password_input_field"
                style="@style/EditTextTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:maxLines="2"
                app:layout_constraintBottom_toTopOf="@+id/auth_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_input_field" />

            <Button
                android:id="@+id/auth_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/round_button"
                android:drawableLeft="@drawable/ic_check_white_24dp"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/login"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/toggle_text"
                app:layout_constraintEnd_toEndOf="@+id/toggle_text"
                app:layout_constraintStart_toStartOf="@+id/toggle_text"
                app:layout_constraintTop_toBottomOf="@+id/password_input_field" />

            <TextView
                android:id="@+id/toggle_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/no_account_hint"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/auth_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

</ScrollView>