<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewmodel"
            type="com.example.authio.viewmodels.ProfileFragmentViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/round_container"
            android:gravity="center_horizontal"
            android:padding="15dp">

            <com.example.authio.views.custom.ErrableEditText
                android:id="@+id/username_edit"
                style="@style/EditTextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:ems="10"
                android:hint="@string/username_hint"
                android:inputType="textMultiLine|textPersonName|textCapSentences"
                android:maxLines="1"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:text="@{viewmodel.user.username}"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/profile_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="280dp"
                android:layout_height="300dp"
                android:layout_margin="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:cropToPadding="true"
                android:padding="10dp"
                android:scaleType="centerCrop"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@id/description_edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username_edit"
                app:srcCompat="@drawable/default_img"
                tools:src="@drawable/default_img"
                tools:visibility="visible" />


            <com.example.authio.views.custom.ErrableEditText
                android:id="@+id/description_edit"
                style="@style/EditTextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:hint="@string/description_hint"
                android:inputType="textMultiLine|textPersonName|textCapSentences"
                android:maxLines="1"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:text="@{viewmodel.user.description}"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/confirm_button"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_image" />

            <Button
                android:id="@+id/confirm_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/round_button"
                android:drawableStart="@drawable/ic_check_white_24dp"
                android:drawableLeft="@drawable/ic_check_white_24dp"
                android:onClick="@{viewmodel.confirmChangesButtonListener}"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/confirm_fields"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/auth_buttons"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description_edit" />

            <LinearLayout
                android:id="@+id/auth_buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/confirm_button">

                <Button
                    android:id="@+id/change_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/round_button"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawableLeft="@drawable/ic_baseline_email_24"
                    android:onClick="@{viewmodel.changeEmailButtonListener}"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/change_email"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/description_edit" />

                <Button
                    android:id="@+id/change_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/round_button"
                    android:drawableStart="@drawable/ic_baseline_security_24"
                    android:drawableLeft="@drawable/ic_baseline_security_24"
                    android:onClick="@{viewmodel.changePasswordButtonListener}"
                    android:padding="5dp"
                    android:singleLine="false"
                    android:text="@string/change_password"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/description_edit" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
